syntax = "proto3";

package coral.agent.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/coral-io/coral/coral/agent/v1;agentv1";

// Agent service for runtime context and operations.
service AgentService {
  // Get runtime context information.
  rpc GetRuntimeContext(GetRuntimeContextRequest) returns (RuntimeContextResponse);

  // Dynamically connect to a service for monitoring.
  rpc ConnectService(ConnectServiceRequest) returns (ConnectServiceResponse);

  // Disconnect from a service.
  rpc DisconnectService(DisconnectServiceRequest) returns (DisconnectServiceResponse);

  // List currently monitored services.
  rpc ListServices(ListServicesRequest) returns (ListServicesResponse);

  // Query telemetry data from agent local storage (RFD 025 - pull-based).
  rpc QueryTelemetry(QueryTelemetryRequest) returns (QueryTelemetryResponse);

  // Query Beyla metrics from agent local storage (RFD 032 Phase 4 - pull-based).
  rpc QueryBeylaMetrics(QueryBeylaMetricsRequest) returns (QueryBeylaMetricsResponse);

  // Shell: Interactive shell session in agent environment (RFD 026).
  rpc Shell(stream ShellRequest) returns (stream ShellResponse);

  // Resize shell terminal (RFD 026).
  rpc ResizeShellTerminal(ResizeShellTerminalRequest) returns (ResizeShellTerminalResponse);

  // Send signal to shell session (RFD 026).
  rpc SendShellSignal(SendShellSignalRequest) returns (SendShellSignalResponse);

  // Kill shell session (RFD 026).
  rpc KillShellSession(KillShellSessionRequest) returns (KillShellSessionResponse);
}

message GetRuntimeContextRequest {
  // Empty - returns current runtime context.
}

message RuntimeContextResponse {
  // Platform information.
  PlatformInfo platform = 1;

  // Runtime type.
  RuntimeContext runtime_type = 2;

  // Sidecar mode (if K8s).
  SidecarMode sidecar_mode = 3;

  // CRI socket info.
  CRISocketInfo cri_socket = 4;

  // Capabilities.
  Capabilities capabilities = 5;

  // Visibility scope.
  VisibilityScope visibility = 6;

  // Detection metadata.
  google.protobuf.Timestamp detected_at = 7;

  // Agent version.
  string version = 8;

  // eBPF capabilities (RFD 013).
  EbpfCapabilities ebpf_capabilities = 9;
}

message PlatformInfo {
  // Operating system: "linux", "darwin", "windows".
  string os = 1;

  // Architecture: "amd64", "arm64".
  string arch = 2;

  // OS version: "Ubuntu 22.04", "macOS 14.2".
  string os_version = 3;

  // Kernel version: "6.5.0-35-generic", "Darwin 23.3.0".
  string kernel = 4;
}

message CRISocketInfo {
  // Socket path: "/var/run/containerd/containerd.sock".
  string path = 1;

  // Runtime type: "containerd", "crio", "docker".
  string type = 2;

  // Runtime version: "1.7.0".
  string version = 3;
}

message VisibilityScope {
  // Can see all host PIDs.
  bool all_pids = 1;

  // Can see all containers.
  bool all_containers = 2;

  // Limited to pod scope.
  bool pod_scope = 3;

  // Explicit target container IDs.
  repeated string container_ids = 4;

  // Namespace type: "host", "container", "pod", "node".
  string namespace = 5;
}

message Capabilities {
  // Can run new containers/processes.
  bool can_run = 1;

  // Can exec into existing containers/processes.
  bool can_exec = 2;

  // Can open interactive shell.
  bool can_shell = 3;

  // Can monitor/observe (always true).
  bool can_connect = 4;
}

enum RuntimeContext {
  // Unknown runtime.
  RUNTIME_CONTEXT_UNKNOWN = 0;

  // Native process on host.
  RUNTIME_CONTEXT_NATIVE = 1;

  // Docker container.
  RUNTIME_CONTEXT_DOCKER = 2;

  // Kubernetes sidecar.
  RUNTIME_CONTEXT_K8S_SIDECAR = 3;

  // Kubernetes DaemonSet.
  RUNTIME_CONTEXT_K8S_DAEMONSET = 4;
}

enum SidecarMode {
  // Unknown sidecar mode.
  SIDECAR_MODE_UNKNOWN = 0;

  // CRI socket available.
  SIDECAR_MODE_CRI = 1;

  // Shared process namespace.
  SIDECAR_MODE_SHARED_NS = 2;

  // Passive mode (limited capabilities).
  SIDECAR_MODE_PASSIVE = 3;
}

// ConnectService RPC messages.
message ConnectServiceRequest {
  // Service name.
  string component_name = 1;

  // Service port number.
  int32 port = 2;

  // Optional health check endpoint path.
  string health_endpoint = 3;

  // Optional service type hint.
  string service_type = 4;

  // Additional metadata.
  map<string, string> labels = 5;
}

message ConnectServiceResponse {
  // Success indicator.
  bool success = 1;

  // Error message if not successful.
  string error = 2;

  // Service name that was connected.
  string service_name = 3;
}

// DisconnectService RPC messages.
message DisconnectServiceRequest {
  // Service name to disconnect.
  string service_name = 1;
}

message DisconnectServiceResponse {
  // Success indicator.
  bool success = 1;

  // Error message if not successful.
  string error = 2;
}

// ListServices RPC messages.
message ListServicesRequest {
  // Empty - returns all monitored services.
}

message ListServicesResponse {
  // Currently monitored services.
  repeated ServiceStatus services = 1;
}

message ServiceStatus {
  // Service name.
  string component_name = 1;

  // Service port number.
  int32 port = 2;

  // Optional health check endpoint path.
  string health_endpoint = 3;

  // Optional service type hint.
  string service_type = 4;

  // Additional metadata.
  map<string, string> labels = 5;

  // Current status.
  string status = 6;  // "healthy", "unhealthy", "unknown"

  // Last check timestamp.
  google.protobuf.Timestamp last_check = 7;

  // Error message if unhealthy.
  string error = 8;
}

// EbpfCollectorKind defines the type of eBPF collector (RFD 013).
enum EbpfCollectorKind {
  EBPF_COLLECTOR_KIND_UNSPECIFIED = 0;
  EBPF_COLLECTOR_KIND_SYSCALL_STATS = 1;
  EBPF_COLLECTOR_KIND_HTTP_LATENCY = 2;
  EBPF_COLLECTOR_KIND_CPU_PROFILE = 3;
  EBPF_COLLECTOR_KIND_TCP_METRICS = 4;
}

// EbpfCapabilities describes what eBPF features are supported on an agent (RFD 013).
message EbpfCapabilities {
  bool supported = 1;               // overall eBPF support
  string kernel_version = 2;        // e.g., "5.15.0"
  bool btf_available = 3;           // BTF/CO-RE support
  bool cap_bpf = 4;                 // CAP_BPF capability
  repeated EbpfCollectorKind available_collectors = 5;
  BeylaCapabilities beyla = 6;      // Beyla integration capabilities (RFD 032)
}

// BeylaCapabilities describes Beyla integration features (RFD 032).
message BeylaCapabilities {
  bool enabled = 1;
  string version = 2;  // Beyla library version
  repeated string supported_protocols = 3;  // ["http", "grpc", "kafka", ...]
  repeated string supported_runtimes = 4;   // ["go", "java", "python", ...]
  bool tracing_enabled = 5;
}

// QueryTelemetry RPC messages (RFD 025 - pull-based telemetry).

// TelemetrySpan represents a filtered OpenTelemetry span stored locally on agents.
message TelemetrySpan {
  // Span timestamp (Unix milliseconds).
  int64 timestamp = 1;

  // OpenTelemetry trace ID.
  string trace_id = 2;

  // OpenTelemetry span ID.
  string span_id = 3;

  // Service name from span attributes.
  string service_name = 4;

  // Span kind (CLIENT, SERVER, INTERNAL, PRODUCER, CONSUMER).
  string span_kind = 5;

  // Span duration in milliseconds.
  double duration_ms = 6;

  // Whether this span represents an error.
  bool is_error = 7;

  // HTTP status code (if applicable).
  int32 http_status = 8;

  // HTTP method (if applicable).
  string http_method = 9;

  // HTTP route (if applicable).
  string http_route = 10;

  // Additional span attributes (key-value pairs).
  map<string, string> attributes = 11;
}

// QueryTelemetryRequest is sent from colony to agent to query recent telemetry.
message QueryTelemetryRequest {
  // Start time for query range (Unix seconds).
  int64 start_time = 1;

  // End time for query range (Unix seconds).
  int64 end_time = 2;

  // Filter by service names (empty = all services).
  repeated string service_names = 3;
}

// QueryTelemetryResponse contains filtered spans from agent's local storage.
message QueryTelemetryResponse {
  // Filtered spans matching the query.
  repeated TelemetrySpan spans = 1;

  // Total number of spans returned.
  int32 total_spans = 2;
}

// QueryBeylaMetrics RPC messages (RFD 032 Phase 4 - pull-based).

// QueryBeylaMetricsRequest is sent from colony to agent to query Beyla metrics.
message QueryBeylaMetricsRequest {
  // Start time for query range (Unix seconds).
  int64 start_time = 1;

  // End time for query range (Unix seconds).
  int64 end_time = 2;

  // Filter by service names (empty = all services).
  repeated string service_names = 3;

  // Metric types to query (empty = all types).
  repeated BeylaMetricType metric_types = 4;
}

// BeylaMetricType specifies which Beyla metrics to query.
enum BeylaMetricType {
  BEYLA_METRIC_TYPE_UNSPECIFIED = 0;
  BEYLA_METRIC_TYPE_HTTP = 1;
  BEYLA_METRIC_TYPE_GRPC = 2;
  BEYLA_METRIC_TYPE_SQL = 3;
}

// QueryBeylaMetricsResponse contains Beyla metrics from agent's local storage.
message QueryBeylaMetricsResponse {
  // HTTP metrics.
  repeated BeylaHttpMetric http_metrics = 1;

  // gRPC metrics.
  repeated BeylaGrpcMetric grpc_metrics = 2;

  // SQL metrics.
  repeated BeylaSqlMetric sql_metrics = 3;

  // Total metrics returned.
  int32 total_metrics = 4;
}

// BeylaHttpMetric represents aggregated HTTP RED metrics.
message BeylaHttpMetric {
  // Timestamp (Unix milliseconds).
  int64 timestamp = 1;

  // Service name.
  string service_name = 2;

  // HTTP method (GET, POST, etc.).
  string http_method = 3;

  // HTTP route (/api/v1/users/:id).
  string http_route = 4;

  // HTTP status code (200, 404, 500, etc.).
  uint32 http_status_code = 5;

  // Latency histogram buckets (milliseconds).
  repeated double latency_buckets = 6;

  // Counts per bucket.
  repeated uint64 latency_counts = 7;

  // Request count.
  uint64 request_count = 8;

  // Additional attributes.
  map<string, string> attributes = 9;
}

// BeylaGrpcMetric represents aggregated gRPC RED metrics.
message BeylaGrpcMetric {
  // Timestamp (Unix milliseconds).
  int64 timestamp = 1;

  // Service name.
  string service_name = 2;

  // gRPC method (/payments.PaymentService/Charge).
  string grpc_method = 3;

  // gRPC status code (0 = OK, 1 = CANCELLED, etc.).
  uint32 grpc_status_code = 4;

  // Latency histogram buckets (milliseconds).
  repeated double latency_buckets = 5;

  // Counts per bucket.
  repeated uint64 latency_counts = 6;

  // Request count.
  uint64 request_count = 7;

  // Additional attributes.
  map<string, string> attributes = 8;
}

// BeylaSqlMetric represents aggregated SQL query metrics.
message BeylaSqlMetric {
  // Timestamp (Unix milliseconds).
  int64 timestamp = 1;

  // Service name.
  string service_name = 2;

  // SQL operation (SELECT, INSERT, UPDATE, DELETE).
  string sql_operation = 3;

  // Table name (extracted from query if possible).
  string table_name = 4;

  // Latency histogram buckets (milliseconds).
  repeated double latency_buckets = 5;

  // Counts per bucket.
  repeated uint64 latency_counts = 6;

  // Query count.
  uint64 query_count = 7;

  // Additional attributes.
  map<string, string> attributes = 8;
}

// Shell RPC messages (RFD 026).

message ShellRequest {
  oneof payload {
    ShellStart start = 1;     // First message from client
    bytes stdin = 2;          // Stdin data from client
    ShellResize resize = 3;   // Terminal resize event
    ShellSignal signal = 4;   // Signal to send to shell
  }
}

message ShellStart {
  string shell = 1;             // /bin/bash, /bin/sh (default: /bin/bash)
  map<string, string> env = 2;  // Additional environment variables
  TerminalSize size = 3;        // Initial terminal size
  string user_id = 4;           // User making request (for audit)
  string approval_id = 5;       // Approval request ID (if required)
}

message ShellResponse {
  oneof payload {
    bytes output = 1;         // Stdout/stderr data from shell
    ShellExit exit = 2;       // Final message with exit code
  }
}

message ShellExit {
  int32 exit_code = 1;
  string session_id = 2;  // Session ID for audit reference
}

message TerminalSize {
  uint32 rows = 1;
  uint32 cols = 2;
}

message ShellResize {
  uint32 rows = 1;
  uint32 cols = 2;
}

message ShellSignal {
  string signal = 1;  // SIGINT, SIGTERM, SIGTSTP, etc.
}

message ResizeShellTerminalRequest {
  string session_id = 1;
  uint32 rows = 2;
  uint32 cols = 3;
}

message ResizeShellTerminalResponse {
  bool success = 1;
  string error = 2;
}

message SendShellSignalRequest {
  string session_id = 1;
  string signal = 2;
}

message SendShellSignalResponse {
  bool success = 1;
  string error = 2;
}

message KillShellSessionRequest {
  string session_id = 1;
}

message KillShellSessionResponse {
  bool success = 1;
  string error = 2;
}

